:bug: z-index with nav and nav-blur above carousel-indicators

--- a/app/scss/partials/_nav.scss
+++ b/app/scss/partials/_nav.scss
@@ -5,7 +5,7 @@
   white-space: nowrap;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 10;
+  z-index: 30;
   ul {
     float: none;
     padding-left: 0;
@@ -40,7 +40,7 @@
           top: -80px;
           visibility: hidden;
           opacity: 0;
-          z-index: 20;
+          z-index: 35;
           &.mobile-show {
             top: 0;
             visibility: visible;
@@ -72,6 +72,7 @@
     background: $light_grey;
     opacity: 0.9;
     filter:alpha(opacity=90);
+    z-index: 25;
     -webkit-transition: background 0.8s ease-out;
     transition: background 0.8s ease-out;
   }
